[package]
name = "outils"
version = "0.1.3"
license = "MIT/Apache-2.0"
authors = ["ouaffm"]

include = [
    "**/*.rs",
    "Cargo.toml",
]

description = "Graph and tree data structure library. Providing utilities which aren't easily available in Rust."
documentation = "https://docs.rs/outils/"
repository = "https://github.com/ouaffm/outils"
keywords = ["data-structure", "graph", "binary-search-tree", "dynamic-connectivity"]
categories = ["data-structures"]
readme = "./README.md"

[lib]
name = "outils"
bench = false

[badges]
travis-ci = { repository = "ouaffm/outils" }

[[bench]]
name = "outils_benchmarks"
harness = false

[dependencies]
slab = "0.4.1"
rand = "0.5.5"

[dev-dependencies]
bencher = "0.1.5"
lazy_static = "1.1.0"

[profile.release]

[profile.bench]
opt-level = 3
debug = true 